--- a/content/AES.ipynb
+++ b/content/AES.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -q pycryptodomex"
+    "!pip install pycryptodome\n"
    ]
   },
   {
@@ -45,9 +45,9 @@
    "source": [
     "from base64 import b64encode, b64decode\n",
     "import hashlib\n",
-    "from Cryptodome.Cipher import AES\n",
+    "from Crypto.Cipher import AES\n",
     "import os\n",
-    "from Cryptodome.Random import get_random_bytes\n",
+    "from Crypto.Random import get_random_bytes\n",
     "from getpass import getpass"
    ]
   },
@@ -180,6 +180,13 @@
     "decrypted = decrypt(encrypted, password)\n",
     "print(bytes.decode(decrypted))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
