--- a/content/AES.ipynb
+++ b/content/AES.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pycryptodome\n"
+    "%pip install -q pycryptodome\n"
    ]
   },
   {
